--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "my-taste2",
   "version": "0.0.0",
+  "private": true,
+  "homepage": "https://placbo.github.io/my-taste2/",
   "license": "MIT",
   "scripts": {
-    "start": "nx serve",
     "build": "nx build",
+    "predeploy": "nx build",
+    "deploy": "gh-pages -d dist",
+    "start": "nx serve",
     "test": "nx test"
   },
-  "private": true,
   "dependencies": {
     "@emotion/react": "11.10.6",
     "@emotion/styled": "11.10.6",
@@ -40,6 +43,7 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "gh-pages": "^5.0.0",
     "jsdom": "~20.0.3",
     "nx": "15.8.5",
     "prettier": "^2.6.2",
